--- a/templates/landing.html
+++ b/templates/landing.html
@@ -50,8 +50,7 @@
             <div class="col-lg-12">
                 <h1 class="page-header">RStudio Employee Directory</h1>
             </div>
-            
-            <div id="thumbnails">Loading...</div>
+            <div id="thumbnails"></div>
 
         <hr>
 
