--- a/views/landing.html
+++ b/views/landing.html
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">RStudio Employee Directory</a>
+          <a class="navbar-brand" href="#">RStudio</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -40,7 +40,8 @@
     <!-- Page Content -->
     <div class="container">
       <div class="row">
-        <div id="thumbnails"></div>
+        <!-- <div id="thumbnails"></div> -->
+        {{ thumbnails }}
       </div>
     </div>
   </body>
