--- a/www/css/employee-dir.css
+++ b/www/css/employee-dir.css
@@ -5,18 +5,22 @@ body {
 .thumbnail {
   #box-shadow: 0 1px 2px rgba(0,0,0,0.15);
   border: none;
+  margin-bottom: 0;
   -webkit-transition: all 1s ease;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  position: relative;
 }
 
 .thumbnail img {
-  height: 250px;
+  width: 25vw;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  -webkit-filter: grayscale(90%); /* Chrome, Safari, Opera */
+  filter: grayscale(90%);
 }
 
 .thumbnail:hover {
@@ -27,27 +31,40 @@ body {
 }
 
 .thumbnail:hover img {
-  opacity: 0.5;
+  #opacity: 0.5;
+  -webkit-filter: none;
+  filter: none;
 }
 
-.thumbnail p {
+.name h4 {
   position: absolute;
-  left: 0;
-  top: 25%;
-  width: 100%;
+  display: block;
+  margin-left: 12%;
+  margin-right: 13%;
+  max-height: 25%;
+  padding: 2%;
+  bottom: 5%;
+  width: 75%;
   text-align: center;
-  color: #000;
-  font-size: 300%;
+  color: #333;
   font-weight: bold;
   font-variant: small-caps;
   cursor: pointer;
-  visibility: hidden;
-  opacity: 0;
+  visibility: visible;
+  opacity: 0.85;
+  background-color: #6aa0d6;
+  border-radius: 5px;
 }
 
-.thumbnail:hover p {
-  visibility: visible;
+.thumbnail:hover .name h4 {
   opacity: 1;
+  background-color: #274a64;
+  color: #fff;
+  padding: 4%;
+  margin-right: 6%;
+  margin-left: 3%;
+  width: 91%;
+  bottom: 0;
 }
 
 .thumbnail {
