--- a/www/views/_landing.html
+++ b/www/views/_landing.html
@@ -40,6 +40,7 @@
       <div class="row" id="main">
         {{ thumbnails }}
       </div>
+      <div id="profile"></div>
     </div>
   </body>
 </html>
