--- a/www/views/yihui.html
+++ b/www/views/yihui.html
@@ -1,56 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    
-<!-- HEAD_CONTENT -->
+<!-- Portfolio Item Heading -->
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">
+      <small>Item Subheading</small>
+    </h1>
+  </div>
+</div>
+<!-- /.row -->
 
-    
+<!-- Portfolio Item Row -->
+<div class="row">
 
-    <link rel="stylesheet" type="text/css" href="../css/employee-dir.css">
-    <title>RStudio Employee Directory</title>
-  </head>
-  <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" 
-                  data-toggle="collapse" 
-                  data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">RStudio</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-<a id="add" href="#" class="action-button">Add</a>
-</li>
-            <li>
-<a id="remove" href="#" class="action-button">Remove</a>
-</li>
-            <li>
-<a id="update" href="#" class="action-button">Update</a>
-</li>
-          </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container -->
-    </nav>
-
-    <!-- Page Content -->
-    <div class="container">
-      <div class="row">
-        
- Yihui 
-
-      </div>
+    <div class="col-md-8">
+        <img class="img-responsive" src="http://placehold.it/750x500" alt="">
     </div>
-  </body>
-</html>
+
+    <div class="col-md-4">
+        <h3>Project Description</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+        <h3>Project Details</h3>
+        <ul>
+            <li>Lorem Ipsum</li>
+            <li>Dolor Sit Amet</li>
+            <li>Consectetur</li>
+            <li>Adipiscing Elit</li>
+        </ul>
+    </div>
+
+</div>
+<!-- /.row -->
