--- a/www/views/_landing.html
+++ b/www/views/_landing.html
@@ -40,7 +40,10 @@
       <div class="row" id="main">
         {{ thumbnails }}
       </div>
-      <div id="profile"></div>
+      <div id="profile" 
+            onclick="document.getElementById('main').style.display = 'block';
+                     this.innerHTML = '';"),>
+      </div>
     </div>
   </body>
 </html>
