--- a/www/views/_profile.html
+++ b/www/views/_profile.html
@@ -1,9 +1,10 @@
-<div class="profile">
+<div class="profile" id={{ Photo }}>
   <!-- Portfolio Item Heading -->
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">{{Photo}}
-        <small>Item Subheading</small>
+      <h1 class="page-header">
+        {{ FirstName }} {{ LastName }}
+        <small>{{ Title }}</small>
       </h1>
     </div>
   </div>
