--- a/www/views/_profile.html
+++ b/www/views/_profile.html
@@ -1,4 +1,6 @@
 <div class="profile" id={{ Photo }}>
+  <button type="button" class="btn btn-primary back">Go Back</button>
+  
   <!-- Portfolio Item Heading -->
   <div class="row">
     <div class="col-lg-12">
