--- a/www/views/_landing.html
+++ b/www/views/_landing.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">RStudio</a>
+          <a class="navbar-brand back" href="#">RStudio</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -29,6 +29,7 @@
             <li>{{ actionLink("add", "Add") }}</li>
             <li>{{ actionLink("remove", "Remove") }}</li>
             <li>{{ actionLink("update", "Update") }}</li>
+            <li><a id="analytics" href="#">Analytics</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -40,6 +41,7 @@
     <div class="container">
       <div class="row" id="main">
         {{ thumbnails }}
+        {{ app }}
       </div>
       <div id="profile"></div>
     </div>
