--- a/www/views/_profile.html
+++ b/www/views/_profile.html
@@ -1,7 +1,17 @@
 <div class="profile" id={{ Photo }}>
-  <button type="button" class="btn btn-primary back">Go Back</button>
+  <!-- Back and Download buttons -->
+  <div class="row buttons">
+    <div class="col-xs-6">
+      <button type="button" class="btn btn-primary back">Go Back</button>
+    </div>
+    <div class="col-xs-6">
+      <a href="views/{{ Photo }}.html" download>
+        <button type="button" class="btn btn-default pull-right">Download Info</button>
+      </a>
+    </div>
+  </div>
   
-  <!-- Portfolio Item Heading -->
+  <!-- Title -->
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">
@@ -10,27 +20,23 @@
       </h1>
     </div>
   </div>
-  <!-- /.row -->
   
-  <!-- Portfolio Item Row -->
+  <!-- Content -->
   <div class="row">
-  
-      <div class="col-md-8">
-          <img class="img-responsive" src="http://placehold.it/750x500" alt="">
-      </div>
-  
-      <div class="col-md-4">
-          <h3>Project Description</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-          <h3>Project Details</h3>
-          <ul>
-              <li>Lorem Ipsum</li>
-              <li>Dolor Sit Amet</li>
-              <li>Consectetur</li>
-              <li>Adipiscing Elit</li>
-          </ul>
-      </div>
-  
+    <div class="col-md-8">
+      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+    </div>
+
+    <div class="col-md-4">
+      <h3>Project Description</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+      <h3>Project Details</h3>
+      <ul>
+          <li>Lorem Ipsum</li>
+          <li>Dolor Sit Amet</li>
+          <li>Consectetur</li>
+          <li>Adipiscing Elit</li>
+      </ul>
+    </div>
   </div>
-  <!-- /.row -->
 </div>
