--- a/www/views/_app.html
+++ b/www/views/_app.html
@@ -1,3 +1,5 @@
+
+<div id="main">
 <!-- Back and Download buttons -->
 <div class="row buttons">
   <div class="col-xs-6">
@@ -15,4 +17,5 @@
       plotOutput('plot1')
     )}}
   </div>
+</div>
 </div>
