--- a/www/views/_landing.html
+++ b/www/views/_landing.html
@@ -29,7 +29,7 @@
             <li>{{ actionLink("add", "Add") }}</li>
             <li>{{ actionLink("remove", "Remove") }}</li>
             <li>{{ actionLink("update", "Update") }}</li>
-            <li><a id="analytics" href="#">Analytics</a></li>
+            <li><a id="analytics" class="navigate" href="app.html">Analytics</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -41,7 +41,6 @@
     <div class="container">
       <div class="row" id="main">
         {{ thumbnails }}
-        {{ app }}
       </div>
       <div id="profile"></div>
     </div>
