--- a/www/views/_profile.html
+++ b/www/views/_profile.html
@@ -1,3 +1,4 @@
+<div id="main">
 <div class="profile" id={{ Photo }}>
   <!-- Back and Download buttons -->
   <div class="row buttons">
@@ -39,4 +40,5 @@
       </ul>
     </div>
   </div>
+</div>
 </div>
