--- a/www/views/_profile.html
+++ b/www/views/_profile.html
@@ -1,21 +1,9 @@
-<div id="main">
 <div class="profile" id={{ Photo }}>
-  <!-- Back and Download buttons -->
-  <div class="row buttons">
-    <div class="col-xs-6">
-      <button type="button" class="btn btn-primary back">Go Back</button>
-    </div>
-    <div class="col-xs-6">
-      <a href="views/{{ Photo }}.html" download>
-        <button type="button" class="btn btn-default pull-right">Download Info</button>
-      </a>
-    </div>
-  </div>
   
   <!-- Title -->
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">
+      <h1 class="page-header" style="margin-top: 10px;">
         {{ FirstName }} {{ LastName }}
         <small>{{ Title }}</small>
       </h1>
@@ -40,5 +28,4 @@
       </ul>
     </div>
   </div>
-</div>
 </div>
