--- a/www/views/_landing.html
+++ b/www/views/_landing.html
@@ -39,8 +39,8 @@
     </nav>
 
     <!-- Page Content -->
-    <div id="outer" class="container">
-      <div id="inner" class="row">
+    <div class="container">
+      <div class="row">
         {{ uiOutput("main") }}
       </div>
     </div>
