--- a/www/views/landing.html
+++ b/www/views/landing.html
@@ -42,6 +42,7 @@
     <div class="container">
       <div class="row">
         {{ uiOutput("main") }}
+        {{ tags$div(id = "app", app) }}
       </div>
     </div>
   </body>
