--- a/www/views/profile.html
+++ b/www/views/profile.html
@@ -7,7 +7,7 @@
         {{ FirstName }} {{ LastName }}
         <small>{{ Title }}</small>
         <a href="https://github.com/{{ GitHubUsername }}">
-          <img class="pull-right" src="photos/gh.png" alt="">
+          <img class="pull-right" src="data/gh.png" alt="">
         </a>
       </h1>
     </div>
