--- a/www/views/landing.html
+++ b/www/views/landing.html
@@ -41,7 +41,9 @@
     <!-- Page Content -->
     <div class="container">
       <div class="row">
-        {{ uiOutput("main") }}
+        {{ dir }}
+        {{ app }}
+        {{ profile }}
       </div>
     </div>
   </body>
