--- a/www/css/employee-dir.css
+++ b/www/css/employee-dir.css
@@ -8,25 +8,40 @@ body {
 }
 
 #analytics {
-  color: #222;
-  background-color: #9d9d9d;
-  border-color: #9d9d9d;
+  color: #000000;
+  background-color: #5ba1ef;
+  border-color: #5ba1ef;
 }
 
 #analytics:hover {
-  color: #fff;
+  color: #ffffff;
+  background-color: #1967be;
+  border-color: #1862b5;
+}
+
+#inputCol {
+  min-height: 20px;
+  padding: 19px;
+  margin: 0px 15px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
 
 .profile-img {
   width: 30vw;
 }
 
+/*
 .ui-draggable-handle {
   top: 90px !important;
 }
+*/
 
 .thumbnail {
-  #box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  /* box-shadow: 0 1px 2px rgba(0,0,0,0.15); */
   border: none;
   margin-bottom: 0;
   -webkit-transition: all 1s ease;
@@ -42,19 +57,19 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  -webkit-filter: grayscale(90%); /* Chrome, Safari, Opera */
+  -webkit-filter: grayscale(90%);
   filter: grayscale(90%);
 }
 
 .thumbnail:hover {
-  transform: scale(1.2, 1.2);
+  /* transform: scale(1.2, 1.2); */
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
   z-index: 1;
   cursor: pointer;
 }
 
 .thumbnail:hover img {
-  #opacity: 0.5;
+  /* opacity: 0.5; */
   -webkit-filter: none;
   filter: none;
 }
@@ -69,30 +84,44 @@ body {
   bottom: 5%;
   width: 75%;
   text-align: center;
-  color: #333;
   font-weight: bold;
   font-variant: small-caps;
   cursor: pointer;
   visibility: visible;
   opacity: 0.85;
-  background-color: #6aa0d6;
+  color: #ffffff;
+  background-color: #2780e3;
+  border-color: #2780e3;
+  /* color: #333; */
+  /* background-color: #6aa0d6; */
   border-radius: 5px;
 }
 
+
 .thumbnail:hover .name h4 {
   opacity: 1;
-  background-color: #274a64;
-  color: #fff;
-  padding: 4%;
+  color: #ffffff;
+  background-color: #1967be;
+  /* background-color: #274a64; */
+  border-color: #1862b5;
+  /* padding: 4%;
   margin-right: 6%;
   margin-left: 3%;
   width: 91%;
-  bottom: 0;
+  bottom: 0; */
 }
+
 
 .thumbnail {
   -webkit-user-select: none;  /* Chrome all / Safari all */
   -moz-user-select: none;     /* Firefox all */
   -ms-user-select: none;      /* IE 10+ */
   user-select: none;          /* Likely future */  
+}
+
+.analyticsName {
+  margin-top: 0px;
+}
+.leaflet {
+  height: 230px !important;
 }
