--- a/www/css/employee-dir.css
+++ b/www/css/employee-dir.css
@@ -22,7 +22,7 @@ body {
 #inputCol {
   min-height: 20px;
   padding: 19px;
-  margin: 0px 15px;
+  margin: 0px;
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
   border-radius: 4px;
