update info/photos, add timezone

--- a/www/views/landing.html
+++ b/www/views/landing.html
@@ -30,6 +30,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li>{{ actionLink("directory", "Directory") }}</li>
+            <li>{{ actionLink("timezone", "Timezone.io") }}</li>
             <li>{{ actionLink("analytics", "Analytics") }}</li>
           </ul>
         </div>
@@ -42,6 +43,7 @@
     <div class="container">
       <div class="row">
         {{ dir }}
+        {{ timezone }}
         {{ app }}
         {{ profile }}
       </div>
