--- a/www/css/employee-dir.css
+++ b/www/css/employee-dir.css
@@ -7,6 +7,7 @@ body {
   overflow-y: scroll;
 }
 
+/*
 #analytics {
   color: #000000;
   background-color: #5ba1ef;
@@ -18,6 +19,7 @@ body {
   background-color: #1967be;
   border-color: #1862b5;
 }
+*/
 
 #inputCol {
   min-height: 20px;
